Closed Bug 1524585 Opened 7 years ago Closed 7 years ago

nsDocumentViewer.cpp: Value stored to 'height' is never read

Categories

(Core :: Layout, defect)

defect
Not set
trivial

Tracking

()

RESOLVED FIXED
mozilla67
Tracking Status
firefox67 --- fixed

People

(Reporter: Sylvestre, Assigned: bastien.abadie)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 1 obsolete file)

https://sylvestre.ledru.info/reports/fx-scan-build/report-nsDocumentViewer.cpp-InitPresentationStuff-55-1.html#EndPath

Probably the same for 'width'
These two lines can probably be removed

Good first bug for Bastien to test the workflow

Attachment #9040733 - Attachment is obsolete: true
Pushed by sledru@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d0b5d0922998 Remove unused width/height updated values. r=emilio
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: