Bug 1524585 - Remove unused width/height updated values. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D18349